mobile view in progress

--- a/index.html
+++ b/index.html
@@ -19,15 +19,45 @@
 
     <div class="container">
 
-    </div>
+        <header>
+            <figure>
+                <img src="./images/logo.svg" alt="logo-image">
+            </figure>
+            <h1>We are launching <span class="soon">soon!</span></h1>
+            <p>Subscribe and get notified</p>
+        </header>
 
-    <footer>
-        <p>
-            Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend
-                Mentor</a>,<br> coded by
-            <a href="https://www.facebook.com/alexopoulos.paminos" target="_blank" class="paminos">Paminos</a>
-        </p>
-    </footer>
+        <main>
+
+            <form action="#" method="post">
+                <input type="email" id="email" placeholder="Your email address.." required>
+                <input type="submit" value="Notify Me">
+            </form>
+
+            <figure>
+                <img class="illustration-img" src="./images/illustration-dashboard.png" alt="illustration-dashboard">
+            </figure>
+
+        </main>
+
+        <footer>
+            <section class="social-icons">
+                <a href="https://www.facebook.com/alexopoulos.paminos" target="_blank"><i
+                        class="fab fa-facebook-f"></i></a>
+                <a href="https://www.facebook.com/alexopoulos.paminos" target="_blank"><i
+                        class="fab fa-twitter"></i></a>
+                <a href="https://www.facebook.com/alexopoulos.paminos" target="_blank"><i
+                        class="fab fa-instagram"></i></a>
+            </section>
+            <p class="copyright">&copy; Copyright Ping. All rights reserved.</p>
+            <p class="my-footer">
+                Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend
+                    Mentor</a>,<br> coded by
+                <a href="https://www.facebook.com/alexopoulos.paminos" target="_blank" class="paminos">Paminos</a>
+            </p>
+        </footer>
+
+    </div>
 
 </body>
 
