error handling in progress

--- a/index.html
+++ b/index.html
@@ -29,12 +29,13 @@
 
         <main>
 
-            <form action="#" method="post">
+            <form action="" method="" novalidate>
                 <input type="email" id="email" placeholder="Your email address.." required>
-                <input type="submit" value="Notify Me">
+                <input class="submit-btn" type="submit" value="Notify Me">
             </form>
+            <p id="emailError">Whoops! It looks like you forgot to add your email</p>
 
-            <figure>
+            <figure class="illustration">
                 <img class="illustration-img" src="./images/illustration-dashboard.png" alt="illustration-dashboard">
             </figure>
 
@@ -58,6 +59,8 @@
         </footer>
 
     </div>
+
+    <script src="./main.js"></script>
 
 </body>
 
