desktop version is ready, js needs improvements

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <main>
 
-            <form action="" method="" novalidate>
+            <form action="#" method="" novalidate>
                 <input type="email" id="email" placeholder="Your email address.." required>
                 <input class="submit-btn" type="submit" value="Notify Me">
             </form>
